css/main.css
/**
 *
 * (c) Copyright Ascensio System SIA 2026
 *
 * This program is a free software product.
 * You can redistribute it and/or modify it under the terms of the GNU Affero General Public License
 * (AGPL) version 3 as published by the Free Software Foundation.
 * In accordance with Section 7(a) of the GNU AGPL its Section 15 shall be amended to the effect
 * that Ascensio System SIA expressly excludes the warranty of non-infringement of any third-party rights.
 *
 * This program is distributed WITHOUT ANY WARRANTY;
 * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * For details, see the GNU AGPL at: http://www.gnu.org/licenses/agpl-3.0.html
 *
 * The interactive user interfaces in modified source and object code versions of the Program
 * must display Appropriate Legal Notices, as required under Section 5 of the GNU AGPL version 3.
 *
 * All the Product's GUI elements, including illustrations and icon sets, as well as technical
 * writing content are licensed under the terms of the Creative Commons Attribution-ShareAlike 4.0 International.
 * See the License terms at http://creativecommons.org/licenses/by-sa/4.0/legalcode
 *
 */

.icon-eurooffice-open,
.icon-eurooffice-convert,
.icon-eurooffice-download,
.icon-eurooffice-create {
    background-color: var(--color-main-text);
    mask: url("../img/app-dark.svg") no-repeat 50% 50%;
    mask-size: 16px 16px;
    -webkit-mask: url("../img/app-dark.svg") no-repeat 50% 50%;
    -webkit-mask-size: 16px 16px;
}

/* eurooffice-inline */
#body-user.eurooffice-inline #app-navigation,
#body-user.eurooffice-inline .app-navigation,
#body-user.eurooffice-inline #app-navigation-vue,
#body-user.eurooffice-inline .searchbox,
#body-user.eurooffice-inline #app-content .files-controls,
#body-user.eurooffice-inline #app-content-vue .files-controls,
#body-user.eurooffice-inline .files-filestable,
#body-user.eurooffice-inline .files-list,
#body-user.eurooffice-inline .files-list__header {
    display: none;
}

#body-user.eurooffice-inline #app-navigation-toggle {
    display: none !important;
}

#body-public.eurooffice-inline #content #app-content,
#body-user.eurooffice-inline #content #app-content,
#body-user.eurooffice-inline #content #app-content-vue,
#body-user.eurooffice-inline #content-vue #app-content-vue {
    margin-left: 0;
    position: relative;
    overflow: hidden;
    overscroll-behavior-y: none;
}

#body-public.eurooffice-inline footer {
    display: none !important;
}

#euroofficeFrame {
    background-color: #fff;
    width: 100%;
    height: 100vh;
    display: block;
    position: absolute;
    top: 0;
    z-index: 1010;
}

.eurooffice-public-open {
    display: inline-block;
    margin-top: 10px;
}

/* AscDesktopEditor */
.AscDesktopEditor #body-user #header {
    display: none;
}

.AscDesktopEditor #body-user #content,
.AscDesktopEditor #body-user #content-vue {
    padding-top: 0;
    margin-top: 0px;
    height: 100%;
}

.AscDesktopEditor #body-user #app-navigation,
.AscDesktopEditor #body-user #controls,
.AscDesktopEditor #body-user #app-sidebar {
    top: 0;
}

.AscDesktopEditor #body-user #app-navigation {
    height: 100%;
}

.AscDesktopEditor #body-user #app-sidebar {
    height: 100vh;
}

.AscDesktopEditor #body-user table.multiselect thead,
.AscDesktopEditor #app-content-files thead {
    top: 44px;
}

.AscDesktopEditor #body-user #gallery-button {
    display: none;
}

.eurooffice-download-container {
    display: flex;
}

.eurooffice-download-container p {
    margin-right: 10px;
    padding-top: 10px;
}

.eurooffice-iframe-container {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    overflow: hidden;
    z-index: 1010;
}

